Sat Feb 23 21:36:13 2008  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/win32ole/win32ole.c (ole_init_cp): should return value.

Sat Feb 23 20:16:05 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (str_sublen): removed.

	* string.c (rb_str_reverse, rb_str_reverse_bang): use 
	  single_byte_optimizable.

Sat Feb 23 19:25:18 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_enc_cr_str_copy_for_substr): renamed from
	  rb_enc_cr_str_copy.

	* string.c: use rb_enc_cr_str_copy_for_substr and keep coderange.

Sat Feb 23 18:50:17 2008  Masaki Suketa  <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (ole_encoding2cp): remove US-ASCII
	  mapping.

Sat Feb 23 01:09:47 2008  Tanaka Akira  <akr@fsij.org>

	* process.c (rlimit_resource_type): new function.
	  (rlimit_resource_value): new function.
	  (proc_getrlimit): use rlimit_resource_type to accept
	  symbol and string as resource type.
	  (proc_setrlimit): use rlimit_resource_type and rlimit_resource_value
	  to accept symbol and string as resource type and values.

Fri Feb 22 21:12:42 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_enc_cr_str_copy): check string's coderange is 7bit or
	  valid.

Fri Feb 22 19:50:19 2008  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* bignum.c (BIGZEROP): fix for longer Bignum zeros.  [ruby-Bugs-17454]

Fri Feb 22 15:47:36 2008  Tanaka Akira  <akr@fsij.org>

	* encoding.c (rb_enc_mbclen): return minlen instead of 1 when
	  a character is not found properly.

	* string.c (rb_enc_strlen): round up string length with fixed
	  multibyte encoding such as UTF-32.
	  (rb_enc_strlen_cr): ditto.
	  (rb_str_substr): fix substring with fixed multibyte encoding.
	  (rb_str_justify): check number of characters.

Fri Feb 22 12:11:12 2008  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_str_inspect): string of ascii incompatible encoding
	  should be escaped and returned as US-ASCII encoding.

Fri Feb 22 11:16:55 2008  NARUSE, Yui  <naruse@ruby-lang.org>
